syntax = "proto2";
package com.handge.bigdata.proto;
message BehaviorData {
    required string localIp = 1; //源IP
    required string desIp = 2; //目的IP
    required uint64 startTime = 3; //访问时间
    optional uint64 endTime = 4; //结束时间
    optional string deviceId = 5; //mac地址
    optional string appName = 6; //应用名称
    optional string appType = 7; //应用类别
    optional string appProtocol = 8; //协议
    optional uint64 send = 9 [default = 0]; //上行流量
    optional uint64 receive = 10 [default = 0]; //下行流量
    optional string details = 11; //详情
    repeated string appTags = 12; //应用标签集合
    optional string host = 13; //域名
    optional string httpUrl = 14; //httpURL
    optional string httpMethod = 15; //httpMethod
    optional string client = 16; //SSH/SSL客户端
    optional string server = 17; //SSH/SSL服务端
    optional bool isnoise = 18;
}
